Fixed bug #46087 (DOMXPath - segfault on destruction of a cloned object).